2010-01-19  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-wrong-passwd-regexp): Add "Timeout, server not
	responding." string.

2010-01-18  Juanma Barranquero  <lekktu@gmail.com>

	* tramp.el (tramp-remote-coding-commands): Fix typo in docstring.

2010-01-12  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-encode, tramp-perl-decode):
	Update copyrights for 2010.
	(tramp-handle-insert-directory): Simplify handling of SWITCHES.
	(tramp-wait-for-output): Check, whether PROC buffer is available.

	* tramp-compat.el (tramp-advice-file-expand-wildcards): Wrap call
	of `featurep' for 2nd argument.

2009-12-26  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-insert-directory): Quote "'" in the
	switches.
	(tramp-open-connection-setup-interactive-shell): Dump stty
	settings.  Enable "neveropen" arg for all `tramp-send-command' calls.

2009-12-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-name-all-completions): Backward/
	XEmacs compatibility: Use `completion-ignore-case' if
	`read-file-name-completion-ignore-case' does not exist.
	(tramp-handle-dired-uncache): Add optional parameter DIR-P for
	XEmacs compatibility.  Reported by Pete Forman
	<petef4+usenet@gmail.com>.
	(tramp-handle-insert-directory): Check also for //SUBDIRED// line.

2009-12-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-remote-p): Expand file name only if
	there is already an established connection.
	(tramp-advice-file-expand-wildcards): Remove it.

	* tramp-compat.el (top): Autoload `tramp-handle-file-remote-p'.
	(tramp-advice-file-expand-wildcards): Moved from tramp.el.
	Activate advice for older GNU Emacs versions.  (Bug#5237)

2009-12-15  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-echo-mark-marker-length): New defconst.
	(tramp-echo-mark, tramp-echoed-echo-mark-regexp): Use it.
	(tramp-check-for-regexp): Check also, when an echoing shell stops