@@ -1,3 +1,7 @@
+2010-01-22  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-imap.el (top): Autoload needed packages.
+
 2010-01-19  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-wrong-passwd-regexp): Add "Timeout, server not
